--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "fastclick": "^1.0.6",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
@@ -54,17 +55,18 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-awesome-swiper": "^2.6.7",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.11.5",
-    "webpack-merge": "^4.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 6.0.0",
