--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "better-scroll": "^1.8.1",
+    "better-scroll": "^1.15.2",
     "express": "^4.17.1",
     "fastclick": "^1.0.6",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
